# LearnFinance-2025

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Agent.md  CLAUDE.md  README.md  devbox.json  docker-compose.yml  onboarding.md  start.sh
brain_api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_shape.py
brain_api/brain_api/: __init__.py  main.py
brain_api/brain_api/core/: __init__.py  alpaca_client.py  config.py  data_freshness.py  features.py  finbert.py  fundamentals.py  hrp.py  inference_utils.py  lstm.py  model_types.py  news_sentiment.py  orders.py  patchtst.py  prices.py  rank_band_orchestration.py  screening_orchestration.py  sentiment_cache.py  sticky_selection.py  strategy_partitions.py  ticker_aliases.py  training_utils.py  version.py
brain_api/brain_api/core/fundamentals/: __init__.py  client.py  fetcher.py  index.py  loader.py  models.py  parser.py  storage.py
brain_api/brain_api/core/lstm/: __init__.py  config.py  dataset.py  inference.py  model.py  training.py  version.py
brain_api/brain_api/core/news_api/: __init__.py  alpaca.py
brain_api/brain_api/core/news_sentiment/: __init__.py  aggregation.py  fetcher.py  models.py  persistence.py  processor.py  protocols.py
brain_api/brain_api/core/patchtst/: __init__.py  config.py  data_loaders.py  dataset.py  inference.py  score_validation.py  training.py  version.py
brain_api/brain_api/core/portfolio_rl/: __init__.py  config.py  constraints.py  data_loading.py  env.py  eval.py  rewards.py  sac_buffer.py  sac_config.py  sac_networks.py  sac_trainer.py  scaler.py  state.py  walkforward.py
brain_api/brain_api/core/ppo/: __init__.py  config.py  data.py  finetune.py  inference.py  train.py  trainer.py  version.py
brain_api/brain_api/core/ppo_lstm/: __init__.py  config.py  data.py  finetune.py  (+6 more)
brain_api/brain_api/domain/: __init__.py  constants.py  exceptions.py
brain_api/brain_api/etl/: __init__.py  aggregation.py  config.py  dataset.py  gap_detection.py  gap_fill.py  parquet_writer.py  pipeline.py  symbol_filter.py
brain_api/brain_api/routes/: __init__.py  allocation.py  allocation_models.py  alpaca.py  alpha_models.py  etl.py  experience.py  health.py  inference.py  models_meta.py  orders.py  root.py  signals.py  signals_fundamentals.py  signals_news.py  training.py  universe.py
brain_api/brain_api/scripts/: push_to_hf.py
brain_api/brain_api/storage/: __init__.py  base.py  base_huggingface.py  base_local.py  huggingface.py  local.py  metadata.py  screening_history.py  sentiment_cache.py  sticky_history.py
brain_api/brain_api/templates/: alpha_hrp_email_base.html.j2  alpha_hrp_summary_prompt_base.j2  india_alpha_hrp_report_email.html.j2  india_alpha_hrp_summary_prompt.j2  india_double_hrp_report_email.html.j2  india_double_hrp_summary_prompt.j2  india_training_summary_email.html.j2  india_training_summary_prompt.j2  india_weekly_report_email.html.j2  india_weekly_summary_prompt.j2  sac_weekly_report_email.html.j2  sac_weekly_summary_prompt.j2  training_summary_email.html.j2  training_summary_prompt.j2  us_alpha_hrp_report_email.html.j2  us_alpha_hrp_summary_prompt.j2  us_double_hrp_report_email.html.j2  us_double_hrp_summary_prompt.j2  us_report_base.html.j2  weekly_report_email.html.j2  weekly_summary_prompt.j2
brain_api/brain_api/universe/: __init__.py  cache.py  halal.py  halal_filtered.py  halal_india.py  halal_new.py  nifty_shariah_500.py  sp500.py  stock_filter.py
brain_api/docs/: architecture_research_comparison.md  five_day_direct_forecast_plan.md  forecaster_snapshots.md  india_multi_market_plan.md  multi_market_plan.md  ppo_training_plan.md  rl_unification_plan.md  sac_training_plan.md
brain_api/docs/flow_diagrams/: README.md  allocation.md  combined.md  etl.md  experience.md  health.md  inference.md  root.md  signals.md  training.md  universe.md
brain_api/docs/n8n_to_prefect_migration/: 00_overview.md  01_openai_summary_endpoint.md  02_gmail_email_endpoint.md  03_alpaca_endpoints.md  04_weekly_context_endpoint.md  05_experience_execution_report.md  06_orders_percentage_weights.md  07_prefect_flow.md
brain_api/tests/: __init__.py  conftest.py  test_allocation_hrp.py  test_allocation_rank_band_endpoint.py  test_allocation_sticky_endpoints.py  test_alpaca.py  test_config.py  test_data_freshness.py  test_domain_hrp.py  test_domain_lstm.py  test_email.py  test_email_us_alpha_hrp.py  test_etl_news_sentiment.py  test_experience.py  test_forecaster_snapshots.py  test_fundamentals_loader.py  test_health.py  test_hf_storage.py  test_inference_lstm.py  test_inference_patchtst.py  test_inference_utils.py  test_iso_year_week_of_month_anchor.py  test_llm.py  test_llm_us_alpha_hrp.py  test_orders.py  test_ppo.py  test_ppo_lstm.py  test_ppo_patchtst.py  test_rank_band_orchestration.py  test_sac.py  test_sac_lstm.py  test_sac_patchtst.py  test_score_validation.py  test_screening_history.py  test_screening_orchestration.py  test_signals_fundamentals.py  test_signals_news.py  test_sticky_history.py  test_sticky_selection.py  test_sticky_selection_rank_band.py  (+7 more)
news_sentiment_etl/: README.md  pyproject.toml
news_sentiment_etl/news_sentiment_etl/: __init__.py  main.py
news_sentiment_etl/news_sentiment_etl/core/: __init__.py  aggregation.py  cache.py  config.py  dataset.py  sentiment.py  symbol_filter.py
news_sentiment_etl/news_sentiment_etl/output/: __init__.py  parquet_writer.py
prefect/: .dockerignore  Dockerfile  README.md  pyproject.toml
prefect/flows/: __init__.py  india_weekly_email.py  india_weekly_training.py  weekly_forecast_email.py  weekly_training.py
prefect/flows/models/: __init__.py  etl.py  forecast_email.py  universe.py
prefect/flows/tasks/: __init__.py  client.py  execution.py  inference.py  portfolio.py  reporting.py
prefect/tests/: __init__.py  test_india_weekly_email.py  test_india_weekly_training.py  test_weekly_forecast_email.py  test_weekly_training.py
shared/: README.md  pyproject.toml
shared/shared/: __init__.py
shared/shared/ml/: __init__.py  device.py  finbert.py
shared/shared/universe/: __init__.py  halal.py
(+170 files in other folders)
