[project]
name = "brain-api"
version = "0.1.0"
description = "FastAPI brain service for LearnFinance-2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "yfinance>=0.2.0",
    "rich>=13.0.0",
    # LSTM training dependencies
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",  # For parquet read/write
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "python-dateutil>=2.8.0",
    # Inference dependencies (market calendar for holiday-aware week boundaries)
    "exchange-calendars>=4.5.0",
    # News sentiment (FinBERT)
    "transformers>=4.36.0",
    # Fundamentals API
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
src = ["brain_api", "tests"]

# Keep noise low in generated/large/non-source folders.
extend-exclude = [
    ".venv",
    "data",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # handled by formatter; ignore long lines (URLs, docstrings)
]

[tool.ruff.lint.isort]
known-first-party = ["brain_api"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "B011",  # assert-false positives for tests
]
"brain_api/routes/**.py" = [
    "B008",  # Allow Depends() in FastAPI route defaults
]

