[project]
name = "news-sentiment-etl"
version = "0.1.0"
description = "ETL pipeline to process HuggingFace financial news dataset into daily sentiment scores per symbol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # HuggingFace dataset loading
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",  # For huggingface-cli login
    # FinBERT sentiment analysis
    "transformers>=4.36.0",
    "torch>=2.0.0",
    # Data processing
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "duckdb>=1.0.0",
    # Utilities
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    # Universe filtering (yfinance for halal ETF holdings)
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[project.scripts]
news-sentiment-etl = "news_sentiment_etl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
src = ["news_sentiment_etl"]

extend-exclude = [
    ".venv",
    "data",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["news_sentiment_etl"]

