[project]
name = "learnfinance-prefect"
version = "0.1.0"
description = "Prefect workflows for LearnFinance-2025 training pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flows"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["flows"]
