[project]
name = "learnfinance-shared"
version = "0.1.0"
description = "Shared utilities for LearnFinance-2025 (halal universe, FinBERT, device detection)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Halal universe fetching
    "yfinance>=0.2.0",
    # FinBERT sentiment analysis
    "transformers>=4.36.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
src = ["shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

